--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<header>
 		<div class="espacioLogo">
 			<a href="index.html"><img src="imagenes/anubia.png" class="logo"></a>
+			<i class="icon-menu" id="botonMenu" ></i>
 		</div>
 		<div class="espacioNav">
 			<nav>
@@ -29,6 +30,7 @@
 
 				</ul>
 			</nav>
+		
 		</div>
 	</header>
 	<div class="cabeceraNoHeader">
@@ -90,7 +92,7 @@
 				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				<img src="https://github.com/josedavidb/Empresa1/blob/gh-pages/imagenes/conexionDispositivos%20-%20copia.png" class="imagenResponsive imagenDispositivos">
+				<img src="imagenes/ConexionDispositivos.png" class="imagenResponsive imagenDispositivos">
 				
 			</div>
 		</div>
