--- a/productos.html
+++ b/productos.html
@@ -8,6 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale =1.0, maximum-scale=1.0">
 	<script src="js/jquery.min.js"></script>
 	<script src="js/live.js"></script>
+	<script src="js/header2.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
 </head>
 <body>
@@ -15,6 +16,7 @@
 	<header>
 		<div class="espacioLogo">
 			<a href="index.html"><img src="imagenes/anubia.png" class="logo"></a>
+			<i class="icon-menu" id="botonMenu" ></i>
 		</div>
 		<div class="espacioNav">
 			<nav>
@@ -35,7 +37,7 @@
 	<div class="tablaDeComparacion roboto">
 		<table>
 			<thead>
-				<td></td>
+				<th></th>
 				<th>Basico</th>
 				<th>Premium</th>
 				<th>Coporativo</th>
